Sat Apr  9 21:19:51 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * examples/ior_corbaloc/run_test.pl:
        * tao/CORBALOC_Parser.cpp:
        * tao/CORBANAME_Parser.cpp:

          Fixed support for default object key when using either corbaloc:
          or corbaname: urls. Added a case to the ior_corbaloc example
          to cover the case of defaulted RIR corbanames.

Sat Apr  9 10:07:02 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tests/Bug_1535_Regression/bug_1535_regression.cpp
	  (test_create_object_before_POA_reactivation):
	* tests/DynAny_Test/test_dynunion.cpp (run_test):

	  Fixed typo.

Sat Apr  9 00:23:50 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Allocator.h (~TAO_Allocator):

	  Added virtual destructor.  Fixes "contains virtual functions but
	  non-virtual destructor" g++ 4.0 (CVS snapshot) warning.

	* tao/TypeCodeFactory/Factory_Map.h (factory_map):
	* tao/TypeCodeFactory/TypeCodeFactory_Adapter_Impl.cpp
	  (extract_typecode):

	  Moved TypeCode factory function map to extract_typecode()
	  method.  Addresses unused variable warnings exhibited by a G++
	  4.0 CVS snapshot.

	* tao/Valuetype/ValueFactory_Map.cpp (rebind, unbind):

	  Initialize variables.  Addresses "variables may be used
	  unitialized" g++ 4.0 (CVS snapshot) warnings.

Sat Apr  9 00:02:16 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* examples/RTScheduling/Fixed_Priority_Scheduler/FP_Scheduler.cpp
	  (copy):
	* examples/RTScheduling/MIF_Scheduler/MIF_Scheduler.cpp (copy):

	  Added missing semi-colon.

	* tests/Bug_1535_Regression/bug_1535_regression.cpp
	  (test_create_object_before_servant_reactivation):
	  (test_create_object_before_POA_reactivation):
	* tests/DynAny_Test/analyzer.cpp (analyze):
	* tests/DynAny_Test/test_dynunion.cpp (run_test):

	  Fixed emulated exception usage.

Fri Apr  8 23:46:47 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/tests/FT_App/FT_TestReplica_i.cpp (repository_id):
