@@ -1,12 +1,12 @@
 // $Id$
 
-#include "TAO_IDL_FE_Export.h"
+#include "global_extern.h"
+
 
 ACE_RCSID (fe, 
            fe_global, 
            "$Id$")
 
-class TAO_IDL_FE_Export IDL_GlobalData;
 
-TAO_IDL_FE_Export IDL_GlobalData *idl_global = 0;
+IDL_GlobalData *idl_global = 0;
 
